--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 </ol>
 
 <script>
-  const repo = "https://github.com/GifPiya/Admin1.git";
+  const repo = "https://github.com/GifPiya/Admin1/tree/main";
   document.getElementById("repoLink").href = repo;
   document.getElementById("repoLink").textContent = repo;
 </script>
